--- a/team.html
+++ b/team.html
@@ -112,9 +112,9 @@
 		    		<div class="team-member wow fadeIn">
 		    			<center><img src="assets/images/team/shivbaran.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
-							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://twitter.com/ShivBaranSingh1" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/shivbaran1" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/spyshiv" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					<p class="member-name">Shiv Baran Singh<br>
 		    		<span>[Web Programming Head]</span></p>
@@ -162,11 +162,11 @@
 		    			<center><img src="assets/images/team/aakash.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
 							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://in.linkedin.com/in/aakash-chandhoke-53008790" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Akash Chandoke<br>
-		    		<span>[Technical Department]</span></p>
+		    		<span>[DB Department]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -192,7 +192,7 @@
 							<li><a href="https://github.com/kratisaxena" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 		    	<p class="member-name">Krati Saxena<br>
-		    		<span>[Technical Department]</span></p>
+		    		<span>[Creative Designer]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
@@ -204,7 +204,7 @@
 							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Vishal Sharma<br>
-		    		<span>[Creative Design Head]</span></p>
+		    		<span>[Creative Designer]</span></p>
 		    		</div>
 		    	</div>
 		    	<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
