edited my contact details

--- a/team.html
+++ b/team.html
@@ -285,9 +285,9 @@
 		    		<div class="team-member wow fadeIn">
 		    			<center><img src="assets/images/team/nikhilbhagat.jpg" class="img-responsive img-thumbnail"></center>
 			    		<ul class="icons">
-							<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/nikhiltheking" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/nikhiljss" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 						<p class="member-name">Nikhil Bhagat<br>
 		    		<span>[Developer]</span></p>
